2026-02-12T01:48:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21930409288 # 875
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-11T01:55:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21889740403 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23] / []

2026-02-10T01:59:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21848644218 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-09T01:49:03Z: