@@ -1,3 +1,12 @@
+2026-02-13T01:51:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21971568237 # 876
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: next accum: outdated-unq outdated-all / unq all: 37 136 / 37 136
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-12T01:48:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21930409288 # 875
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
